[FIX] Overflow and safari scrolling for colors

--- a/static/diagram.css
+++ b/static/diagram.css
@@ -88,6 +88,7 @@ div.nav-group:nth-child(3) {
 }
 
 .colors {
+    -webkit-overflow-scrolling: touch;
     flex: 1;
     display: flex;
     overflow: auto;
